# ACAOS

./: CMakeLists.txt  CmakePresets.json  lect_3_segment_memory.c  lect_4_real_memory.c  lect_5_mcb.c  lect_5_scheduler.c  lect_6_page_memory.c  lect_7_ipc.c
